--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p class="red">Test2</p>
+    <header>
+        <img src="./src/img/logo/ohmyfood.png" alt="Logo ohmyfood">
+    </header>
 </body>
 </html>
