html ok + validator ok + ajout dossier restaurant

--- a/index.html
+++ b/index.html
@@ -23,20 +23,66 @@
         </div>
     </header>
     <main>
-        <section class="description"></section>
-        <section class="functioning"></section>
-        <h1>Fonctionnement</h1>
-        <ol>
-            <li><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
-            <li><i class="fas fa-list-ul"></i>Composez votre menu</li>
-            <li><i class="fas fa-store"></i>Dégustez au restaurant</li>
-        </ol>
-        <section class="restaurants"></section>
-        <h1>Restaurants</h1>
-        <figure></figure>
-        <figure></figure>
-        <figure></figure>
-        <figure></figure>
+        <section class="informations">
+            <h1>Réservez le menu qui vous convient</h1>
+            <p>Découvrez des restaurants d'exeception, séléctionnés par nos soins.</p>
+            <div>
+                <p>Explorer nos restaurants</p>
+            </div>
+        </section>
+        <section class="functioning">
+            <h1>Fonctionnement</h1>
+            <ol>
+                <li><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
+                <li><i class="fas fa-list-ul"></i>Composez votre menu</li>
+                <li><i class="fas fa-store"></i>Dégustez au restaurant</li>
+            </ol>
+        </section>
+        <section class="restaurants">
+            <h1>Restaurants</h1>
+            <a href="#">
+                <figure>
+                    <div>Nouveau</div>
+                    <img src="./src/img/restaurants/restaurant1.jpg" alt="La palette du goût">
+                    <figcaption>
+                        <span>La palette du goût</span>
+                        <p>Ménilmontant</p>
+                        <div><i class="far fa-heart"></i></div>
+                    </figcaption>
+                </figure>
+            </a>
+            <a href="#">
+                <figure>
+                    <div>Nouveau</div>
+                    <img src="./src/img/restaurants/restaurant2.jpg" alt="La note enchantée">
+                    <figcaption>
+                        <span>La note enchantée</span>
+                        <p>Charonne</p>
+                        <div><i class="far fa-heart"></i></div>
+                    </figcaption>
+                </figure>
+            </a>
+            <a href="#">
+                <figure>
+                    <img src="./src/img/restaurants/restaurant3.jpg" alt="A la française">
+                    <figcaption>
+                        <span>A la française</span>
+                        <p>Cité Rouge</p>
+                        <div><i class="far fa-heart"></i></div>
+                    </figcaption>
+                </figure>
+            </a>
+            <a href="#">
+                <figure>
+                    <img src="./src/img/restaurants/restaurant4.jpg" alt="Le délice des sens">
+                    <figcaption>
+                        <span>Le délice des sens</span>
+                        <p>Folie-Méricourt</p>
+                        <div><i class="far fa-heart"></i></div>
+                    </figcaption>
+                </figure>
+            </a>
+        </section>
     </main>
     <footer>
         <h2>ohmyfood</h2>
