début avec sass + test + imbrication + vairables

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </section>
         <section class="restaurants">
             <h1>Restaurants</h1>
-            <a href="#">
+            <a href="./restaurants/la-palette-du-gout.html">
                 <figure>
                     <div>Nouveau</div>
                     <img src="./src/img/restaurants/restaurant1.jpg" alt="La palette du goût">
@@ -51,7 +51,7 @@
                     </figcaption>
                 </figure>
             </a>
-            <a href="#">
+            <a href="./restaurants/la-note-enchantee.html">
                 <figure>
                     <div>Nouveau</div>
                     <img src="./src/img/restaurants/restaurant2.jpg" alt="La note enchantée">
@@ -62,7 +62,7 @@
                     </figcaption>
                 </figure>
             </a>
-            <a href="#">
+            <a href="./restaurants/a-la-francaise.html">
                 <figure>
                     <img src="./src/img/restaurants/restaurant3.jpg" alt="A la française">
                     <figcaption>
@@ -72,7 +72,7 @@
                     </figcaption>
                 </figure>
             </a>
-            <a href="#">
+            <a href="./restaurants/le-delice-des-sens.html">
                 <figure>
                     <img src="./src/img/restaurants/restaurant4.jpg" alt="Le délice des sens">
                     <figcaption>
