trie architecture + footer ok mobile + test BEM

--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
             </a>
         </section>
     </main>
-    <footer>
-        <h2>ohmyfood</h2>
-        <ul>
-            <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
-            <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
-            <li><a href="#">Mentions légales</a></li>
-            <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
+    <footer class="footer">
+        <h2 class="footer__title">ohmyfood</h2>
+        <ul class="footer__column">
+            <li><a class="footer__column__link" href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+            <li><a class="footer__column__link" href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+            <li><a class="footer__column__link" href="#">Mentions légales</a></li>
+            <li><a class="footer__column__link" href="mailto:contact@ohmyfood.com">Contact</a></li>
         </ul>
     </footer>
 </body>
