header ok + bem a vérifier

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 </head>
 
 <body>
-    <header>
-        <img src="./src/img/logo/ohmyfood.png" alt="Logo ohmyfood">
-        <div>
+    <header class="header">
+        <div class="header__wrapper__img">
+            <img src="./src/img/logo/ohmyfood.svg" alt="Logo ohmyfood">
+        </div>
+        <div class="header__wrapper__search">
             <i class="fas fa-map-marker-alt"></i>
-            <input type="text" id="maRecherche" name="q" placeholder="Paris, Belleville"
-                aria-label="Rechercher des restaurants sur le site">
+            <p>Paris, Belleville</p>
         </div>
     </header>
     <main>
