session coworking + ajout de feuille scss

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <main>
         <section class="informations">
-            <h1>Réservez le menu qui vous convient</h1>
+            <h1 class="informations__title">Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exeception, séléctionnés par nos soins.</p>
             <div>
                 <p>Explorer nos restaurants</p>
