informations ok + button ok

--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
 
 <body>
     <header class="header">
-        <div class="header__wrapper__img">
+        <div class="header__wrapper-img">
             <img src="./src/img/logo/ohmyfood.svg" alt="Logo ohmyfood">
         </div>
-        <div class="header__wrapper__search">
+        <div class="header__wrapper-search">
             <i class="fas fa-map-marker-alt"></i>
             <p>Paris, Belleville</p>
         </div>
     </header>
     <main>
         <section class="informations">
+            <div class="informations__wrapper">
             <h1 class="informations__title">Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exeception, séléctionnés par nos soins.</p>
-            <div>
-                <p>Explorer nos restaurants</p>
+            <button>Explorer nos restaurants</button>
             </div>
         </section>
         <section class="functioning">
-            <h1>Fonctionnement</h1>
+            <h2>Fonctionnement</h2>
             <ol>
                 <li><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
                 <li><i class="fas fa-list-ul"></i>Composez votre menu</li>
@@ -40,7 +40,7 @@
             </ol>
         </section>
         <section class="restaurants">
-            <h1>Restaurants</h1>
+            <h2>Restaurants</h2>
             <a href="./restaurants/la-palette-du-gout.html">
                 <figure>
                     <div>Nouveau</div>
