--- a/index.html
+++ b/index.html
@@ -25,30 +25,28 @@
     </header>
     <main>
         <section class="informations">
-            <div class="informations__wrapper">
             <h1 class="informations__title">Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exeception, séléctionnés par nos soins.</p>
-            <button>Explorer nos restaurants</button>
-            </div>
+            <button class="btn">Explorer nos restaurants</button>
         </section>
         <section class="functioning">
             <h2>Fonctionnement</h2>
-            <ol>
-                <li><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
-                <li><i class="fas fa-list-ul"></i>Composez votre menu</li>
-                <li><i class="fas fa-store"></i>Dégustez au restaurant</li>
+            <ol class="functioning__list">
+                <li class="functioning__item"><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
+                <li class="functioning__item"><i class="fas fa-list-ul"></i>Composez votre menu</li>
+                <li class="functioning__item"><i class="fas fa-store"></i>Dégustez au restaurant</li>
             </ol>
         </section>
         <section class="restaurants">
             <h2>Restaurants</h2>
             <a href="./restaurants/la-palette-du-gout.html">
-                <figure>
-                    <div>Nouveau</div>
-                    <img src="./src/img/restaurants/restaurant1.jpg" alt="La palette du goût">
-                    <figcaption>
+                <figure class="card">
+                    <div class="button-new">Nouveau</div>
+                    <img class="card__img" src="./src/img/restaurants/restaurant1.jpg" alt="La palette du goût">
+                    <figcaption class="card__description">
                         <span>La palette du goût</span>
                         <p>Ménilmontant</p>
-                        <div><i class="far fa-heart"></i></div>
+                        <div class="icone-heart"><i class="far fa-heart"></i></div>
                     </figcaption>
                 </figure>
             </a>
