partie functioning ok + transition ok

--- a/index.html
+++ b/index.html
@@ -30,11 +30,29 @@
             <button class="btn">Explorer nos restaurants</button>
         </section>
         <section class="functioning">
-            <h2>Fonctionnement</h2>
+            <h2 class="functioning__title">Fonctionnement</h2>
             <ol class="functioning__list">
-                <li class="functioning__item"><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
-                <li class="functioning__item"><i class="fas fa-list-ul"></i>Composez votre menu</li>
-                <li class="functioning__item"><i class="fas fa-store"></i>Dégustez au restaurant</li>
+                <li class="functioning__item">
+                    <span class="functioning__item__number">1</span>
+                    <div class="functioning__item__wrapper-icon">
+                        <i class="fas fa-mobile-alt"></i>
+                    </div>
+                    <p>Choisissez un restaurant</p>
+                </li>
+                <li class="functioning__item">
+                    <span class="functioning__item__number">2</span>
+                    <div class="functioning__item__wrapper-icon">
+                        <i class="fas fa-list-ul"></i>
+                    </div>
+                    <p>Composez votre menu</p>
+                </li>
+                <li class="functioning__item">
+                    <span class="functioning__item__number">3</span>
+                    <div class="functioning__item__wrapper-icon">
+                        <i class="fas fa-store"></i>
+                    </div>
+                    <p>Dégustez au restaurant</p>
+                </li>
             </ol>
         </section>
         <section class="restaurants">
