--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
             </ol>
         </section>
         <section class="restaurants">
-            <h2>Restaurants</h2>
+            <h2 class="restaurants__title">Restaurants</h2>
             <a href="./restaurants/la-palette-du-gout.html">
                 <figure class="card">
                     <div class="button-new">Nouveau</div>
-                    <img class="card__img" src="./src/img/restaurants/restaurant1.jpg" alt="La palette du goût">
+                    <img src="./src/img/restaurants/restaurant1.jpg" alt="La palette du goût">
                     <figcaption class="card__description">
                         <span>La palette du goût</span>
                         <p>Ménilmontant</p>
@@ -69,33 +69,33 @@
                 </figure>
             </a>
             <a href="./restaurants/la-note-enchantee.html">
-                <figure>
-                    <div>Nouveau</div>
+                <figure class="card">
+                    <div class="button-new">Nouveau</div>
                     <img src="./src/img/restaurants/restaurant2.jpg" alt="La note enchantée">
-                    <figcaption>
+                    <figcaption class="card__description">
                         <span>La note enchantée</span>
                         <p>Charonne</p>
-                        <div><i class="far fa-heart"></i></div>
+                        <div class="icone-heart"><i class="far fa-heart"></i></div>
                     </figcaption>
                 </figure>
             </a>
             <a href="./restaurants/a-la-francaise.html">
-                <figure>
+                <figure class="card">
                     <img src="./src/img/restaurants/restaurant3.jpg" alt="A la française">
-                    <figcaption>
+                    <figcaption class="card__description">
                         <span>A la française</span>
                         <p>Cité Rouge</p>
-                        <div><i class="far fa-heart"></i></div>
+                        <div class="icone-heart"><i class="far fa-heart"></i></div>
                     </figcaption>
                 </figure>
             </a>
             <a href="./restaurants/le-delice-des-sens.html">
-                <figure>
+                <figure class="card">
                     <img src="./src/img/restaurants/restaurant4.jpg" alt="Le délice des sens">
-                    <figcaption>
+                    <figcaption class="card__description">
                         <span>Le délice des sens</span>
                         <p>Folie-Méricourt</p>
-                        <div><i class="far fa-heart"></i></div>
+                        <div class="icone-heart"><i class="far fa-heart"></i></div>
                     </figcaption>
                 </figure>
             </a>
