remplissement de COEUR ok !

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <figcaption class="card__description">
                         <span>La palette du goût</span>
                         <p>Ménilmontant</p>
-                        <div class="icone-heart"><i class="far fa-heart"></i></div>
+                        <div class="icone-heart"><i class="fas fa-heart"></i></div>
                     </figcaption>
                 </figure>
             </a>
@@ -75,7 +75,7 @@
                     <figcaption class="card__description">
                         <span>La note enchantée</span>
                         <p>Charonne</p>
-                        <div class="icone-heart"><i class="far fa-heart"></i></div>
+                        <div class="icone-heart"><i class="fas fa-heart"></i></div>
                     </figcaption>
                 </figure>
             </a>
@@ -85,7 +85,7 @@
                     <figcaption class="card__description">
                         <span>A la française</span>
                         <p>Cité Rouge</p>
-                        <div class="icone-heart"><i class="far fa-heart"></i></div>
+                        <div class="icone-heart"><i class="fas fa-heart"></i></div>
                     </figcaption>
                 </figure>
             </a>
@@ -95,7 +95,7 @@
                     <figcaption class="card__description">
                         <span>Le délice des sens</span>
                         <p>Folie-Méricourt</p>
-                        <div class="icone-heart"><i class="far fa-heart"></i></div>
+                        <div class="icone-heart"><i class="fas fa-heart"></i></div>
                     </figcaption>
                 </figure>
             </a>
