arrête de la technique sur un coeur, remplacement par technique de superposition

--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
                     <figcaption class="card__description">
                         <span>La palette du goût</span>
                         <p>Ménilmontant</p>
-                        <div class="icone-heart"><i class="fas fa-heart"></i></div>
+                        <div class="icone-heart">
+                            <i class="far fa-heart white"></i>
+                            <i class="fas fa-heart colored"></i>
+                        </div>
                     </figcaption>
                 </figure>
             </a>
@@ -77,7 +80,10 @@
                     <figcaption class="card__description">
                         <span>La note enchantée</span>
                         <p>Charonne</p>
-                        <div class="icone-heart"><i class="fas fa-heart"></i></div>
+                        <div class="icone-heart">
+                            <i class="far fa-heart white"></i>
+                            <i class="fas fa-heart colored"></i>
+                        </div>
                     </figcaption>
                 </figure>
             </a>
@@ -87,7 +93,10 @@
                     <figcaption class="card__description">
                         <span>A la française</span>
                         <p>Cité Rouge</p>
-                        <div class="icone-heart"><i class="fas fa-heart"></i></div>
+                        <div class="icone-heart">
+                            <i class="far fa-heart white"></i>
+                            <i class="fas fa-heart colored"></i>
+                        </div>
                     </figcaption>
                 </figure>
             </a>
@@ -97,7 +106,10 @@
                     <figcaption class="card__description">
                         <span>Le délice des sens</span>
                         <p>Folie-Méricourt</p>
-                        <div class="icone-heart"><i class="fas fa-heart"></i></div>
+                        <div class="icone-heart">
+                            <i class="far fa-heart white"></i>
+                            <i class="fas fa-heart colored"></i>
+                        </div>
                     </figcaption>
                 </figure>
             </a>
