--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section class="informations">
             <h1 class="informations__title">Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exeception, séléctionnés par nos soins.</p>
-            <button class="btn">Explorer nos restaurants</button>
+            <button class="btn"><a href="#restaurant">Explorer nos restaurants</a></button>
         </section>
         <section class="functioning">
             <h2 class="functioning__title">Fonctionnement</h2>
@@ -58,7 +58,7 @@
             </ol>
         </section>
         <section class="restaurants">
-            <h2 class="restaurants__title">Restaurants</h2>
+            <h2 id="restaurant" class="restaurants__title">Restaurants</h2>
             <a href="./restaurants/la-palette-du-gout.html">
                 <figure class="card">
                     <div class="button-new">Nouveau</div>
