loader DONE + ajustement à faire demain

--- a/index.html
+++ b/index.html
@@ -14,10 +14,16 @@
 </head>
 
 <body>
-    <header class="header">
-        <div class="header__wrapper-img">
-            <img src="./src/img/logo/ohmyfood.svg" alt="Logo ohmyfood">
+    <div class="loader__section">
+        <div class="loader__wrapper">
+            <div class="loader__item loader__item--1"></div>
+            <div class="loader__item loader__item--2"></div>
+            <div class="loader__item loader__item--3"></div>
         </div>
+    </div>
+    <div class="header__wrapper-img">
+        <img src="./src/img/logo/ohmyfood.svg" alt="Logo ohmyfood">
+    </div>
     </header>
     <main>
         <section class="location">
