--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css">
     <link rel="stylesheet" href="./src/styles/style.css">
+    <link rel="icon" href="./src/img/favicon/favicon.ico" />
     <title>Ohmyfood</title>
 </head>
 
