--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <div class="loader__item loader__item--3"></div>
         </div>
     </div>
+    <header>
     <div class="header__wrapper-img">
         <img src="./src/img/logo/ohmyfood.svg" alt="Logo ohmyfood">
     </div>
@@ -36,7 +37,7 @@
         <section class="informations">
             <h1 class="informations__title">Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exeception, séléctionnés par nos soins.</p>
-            <button class="btn"><a href="#restaurant">Explorer nos restaurants</a></button>
+            <a class="btn" href="#restaurant">Explorer nos restaurants</a>
         </section>
         <section class="functioning">
             <h2 class="functioning__title">Fonctionnement</h2>
