début la palette du gout et coeur probleme

--- a/restaurants/la-palette-du-gout.html
+++ b/restaurants/la-palette-du-gout.html
@@ -22,9 +22,17 @@
         <nav>
             <a href="/index.html" class="header__return"><i class="fas fa-arrow-left"></i></a>
         </nav>
-        <img src="/src/img/restaurants/restaurant1.jpg" alt="La la-palette-du-gout">
+        <img class="header__img-restaurant" src="/src/img/restaurants/restaurant1.jpg" alt="La la-palette-du-gout">
     </header>
-
+    <section class="menus">
+        <h1 class="menus__title">La palette du goût</h1>
+        <div class="menus_relative">
+            <div class="icone-heart">
+                <i class="far fa-heart white"></i>
+                <i class="fas fa-heart colored"></i>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
