fix coeur ok avec stoke + postion ok

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <span>La palette du goût</span>
                         <p>Ménilmontant</p>
                         <div class="icone-heart">
-                            <i class="far fa-heart white"></i>
+                            <i class="fas fa-heart white"></i>
                             <i class="fas fa-heart colored"></i>
                         </div>
                     </figcaption>
@@ -89,7 +89,7 @@
                         <span>La note enchantée</span>
                         <p>Charonne</p>
                         <div class="icone-heart">
-                            <i class="far fa-heart white"></i>
+                            <i class="fas fa-heart white"></i>
                             <i class="fas fa-heart colored"></i>
                         </div>
                     </figcaption>
@@ -102,7 +102,7 @@
                         <span>A la française</span>
                         <p>Cité Rouge</p>
                         <div class="icone-heart">
-                            <i class="far fa-heart white"></i>
+                            <i class="fas fa-heart white"></i>
                             <i class="fas fa-heart colored"></i>
                         </div>
                     </figcaption>
@@ -115,7 +115,7 @@
                         <span>Le délice des sens</span>
                         <p>Folie-Méricourt</p>
                         <div class="icone-heart">
-                            <i class="far fa-heart white"></i>
+                            <i class="fas fa-heart white"></i>
                             <i class="fas fa-heart colored"></i>
                         </div>
                     </figcaption>
