--- a/restaurants/la-palette-du-gout.html
+++ b/restaurants/la-palette-du-gout.html
@@ -26,12 +26,10 @@
     </header>
     <section class="menus">
         <h1 class="menus__title">La palette du goût</h1>
-        <div class="menus_relative">
             <div class="icone-heart">
-                <i class="far fa-heart white"></i>
+                <i class="fas fa-heart white"></i>
                 <i class="fas fa-heart colored"></i>
             </div>
-        </div>
     </section>
 </body>
 
