--- a/restaurants/la-palette-du-gout.html
+++ b/restaurants/la-palette-du-gout.html
@@ -9,20 +9,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Shrikhand&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css">
-    <link rel="stylesheet" href="/src/styles/style.css">
-    <link rel="icon" href="/src/img/favicon/favicon.ico" />
+    <link rel="stylesheet" href="../src/styles/style.css">
+    <link rel="icon" href="../src/img/favicon/favicon.ico" />
     <title>Ohmyfood</title>
 </head>
 
 <body>
     <header>
         <div class="header__wrapper-img">
-            <img src="/src/img/logo/ohmyfood.svg" alt="Logo ohmyfood">
+            <img src="../src/img/logo/ohmyfood.svg" alt="Logo ohmyfood">
         </div>
         <nav>
-            <a href="/index.html" class="header__return"><i class="fas fa-arrow-left"></i></a>
+            <a href="../index.html" class="header__return"><i class="fas fa-arrow-left"></i></a>
         </nav>
-        <img class="header__img-restaurant" src="/src/img/restaurants/restaurant1.jpg" alt="La la-palette-du-gout">
+        <img class="header__img-restaurant" src="../src/img/restaurants/restaurant1.jpg" alt="La la-palette-du-gout">
     </header>
     <section class="menus">
         <h1 class="menus__title">La palette du goût</h1>
