start menu enter

--- a/restaurants/la-palette-du-gout.html
+++ b/restaurants/la-palette-du-gout.html
@@ -24,13 +24,43 @@
         </nav>
         <img class="header__img-restaurant" src="../src/img/restaurants/restaurant1.jpg" alt="La la-palette-du-gout">
     </header>
-    <section class="menus">
+    <main class="menus">
         <h1 class="menus__title">La palette du goût</h1>
-            <div class="icone-heart">
-                <i class="fas fa-heart white"></i>
-                <i class="fas fa-heart colored"></i>
-            </div>
-    </section>
+        <div class="icone-heart">
+            <i class="fas fa-heart white"></i>
+            <i class="fas fa-heart colored"></i>
+        </div>
+        <section class="enter">
+            <h2>entrées</h2>
+            <div class="enter__bar"></div>
+            <ul>
+                <li>
+                    <div class="enter__wrapper-p">
+                        <p class="enter__title">Fricassée d'escargot</p>
+                        <p class="enter__description">Au piment d'Espelette</p>
+                    </div>
+                    <span>25€</span>
+                    <span></span>
+                </li>
+                <li>
+                    <div class="enter__wrapper-p">
+                        <p class="enter__title">Foie gras de canard mi-cuit</p>
+                        <p class="enter__description">Et ses copeaux de truffe noire</p>
+                    </div>
+                    <span>35€</span>
+                    <span></span>
+                </li>
+                <li>
+                    <div class="enter__wrapper-p">
+                        <p class="enter__title">Oeuf au plat</p>
+                        <p class="enter__description">Assaisonné à la truffe sur lit de caviar</p>
+                    </div>
+                    <span>20€</span>
+                    <span></span>
+                </li>
+            </ul>
+        </section>
+    </main>
 
 </body>
 
