keyframes dishes en cours manque delay

--- a/restaurants/la-palette-du-gout.html
+++ b/restaurants/la-palette-du-gout.html
@@ -39,7 +39,7 @@
                         <p class="enter__title">Fricassée d'escargot</p>
                         <p class="enter__description">Au piment d'Espelette</p>
                     </div>
-                    <span>25€</span>
+                    <span class="price">25€</span>
                     <span></span>
                 </li>
                 <li>
@@ -47,7 +47,7 @@
                         <p class="enter__title">Foie gras de canard mi-cuit</p>
                         <p class="enter__description">Et ses copeaux de truffe noire</p>
                     </div>
-                    <span>35€</span>
+                    <span class="price">35€</span>
                     <span></span>
                 </li>
                 <li>
@@ -55,7 +55,7 @@
                         <p class="enter__title">Oeuf au plat</p>
                         <p class="enter__description">Assaisonné à la truffe sur lit de caviar</p>
                     </div>
-                    <span>20€</span>
+                    <span class="price">20€</span>
                     <span></span>
                 </li>
             </ul>
