fix name li in palette-du-gout

--- a/restaurants/la-palette-du-gout.html
+++ b/restaurants/la-palette-du-gout.html
@@ -33,8 +33,8 @@
         <section class="enter">
             <h2>entrées</h2>
             <div class="enter__bar"></div>
-            <ul>
-                <li>
+            <ul class="enter__card">
+                <li class="enter__card__item">
                     <div class="enter__wrapper-p">
                         <p class="enter__title">Fricassée d'escargot</p>
                         <p class="enter__description">Au piment d'Espelette</p>
@@ -42,7 +42,7 @@
                     <span class="price">25€</span>
                     <span></span>
                 </li>
-                <li>
+                <li class="enter__card__item">
                     <div class="enter__wrapper-p">
                         <p class="enter__title">Foie gras de canard mi-cuit</p>
                         <p class="enter__description">Et ses copeaux de truffe noire</p>
@@ -50,7 +50,7 @@
                     <span class="price">35€</span>
                     <span></span>
                 </li>
-                <li>
+                <li class="enter__card__item">
                     <div class="enter__wrapper-p">
                         <p class="enter__title">Oeuf au plat</p>
                         <p class="enter__description">Assaisonné à la truffe sur lit de caviar</p>
