green check in load

--- a/restaurants/la-palette-du-gout.html
+++ b/restaurants/la-palette-du-gout.html
@@ -40,7 +40,7 @@
                         <p class="enter__description">Au piment d'Espelette</p>
                     </div>
                     <span class="price">25€</span>
-                    <span></span>
+                    <span class="check"><i class="fas fa-check-circle"></i></span>
                 </li>
                 <li class="enter__card__item">
                     <div class="enter__wrapper-p">
