--- a/restaurants/la-palette-du-gout.html
+++ b/restaurants/la-palette-du-gout.html
@@ -1,67 +1,77 @@
 <!DOCTYPE html>
 <html lang="fr">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Shrikhand&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css">
-    <link rel="stylesheet" href="../src/styles/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+    />
+    <link rel="stylesheet" href="../src/styles/style.css" />
     <link rel="icon" href="../src/img/favicon/favicon.ico" />
     <title>Ohmyfood</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="header__wrapper-img">
-            <img src="../src/img/logo/ohmyfood.svg" alt="Logo ohmyfood">
-        </div>
-        <nav>
-            <a href="../index.html" class="header__return"><i class="fas fa-arrow-left"></i></a>
-        </nav>
-        <img class="header__img-restaurant" src="../src/img/restaurants/restaurant1.jpg" alt="La la-palette-du-gout">
+      <div class="header__wrapper-img">
+        <img src="../src/img/logo/ohmyfood.svg" alt="Logo ohmyfood" />
+      </div>
+      <nav>
+        <a href="../index.html" class="header__return"
+          ><i class="fas fa-arrow-left"></i
+        ></a>
+      </nav>
+      <img
+        class="header__img-restaurant"
+        src="../src/img/restaurants/restaurant1.jpg"
+        alt="La la-palette-du-gout"
+      />
     </header>
     <main class="menus">
-        <h1 class="menus__title">La palette du goût</h1>
-        <div class="icone-heart">
-            <i class="fas fa-heart white"></i>
-            <i class="fas fa-heart colored"></i>
-        </div>
-        <section class="enter">
-            <h2>entrées</h2>
-            <div class="enter__bar"></div>
-            <ul class="enter__card">
-                <li class="enter__card__item">
-                    <div class="enter__wrapper-p">
-                        <p class="enter__title">Fricassée d'escargot</p>
-                        <p class="enter__description">Au piment d'Espelette</p>
-                    </div>
-                    <span class="price">25€</span>
-                    <span class="check"><i class="fas fa-check-circle"></i></span>
-                </li>
-                <li class="enter__card__item">
-                    <div class="enter__wrapper-p">
-                        <p class="enter__title">Foie gras de canard mi-cuit</p>
-                        <p class="enter__description">Et ses copeaux de truffe noire</p>
-                    </div>
-                    <span class="price">35€</span>
-                    <span></span>
-                </li>
-                <li class="enter__card__item">
-                    <div class="enter__wrapper-p">
-                        <p class="enter__title">Oeuf au plat</p>
-                        <p class="enter__description">Assaisonné à la truffe sur lit de caviar</p>
-                    </div>
-                    <span class="price">20€</span>
-                    <span></span>
-                </li>
-            </ul>
-        </section>
+      <h1 class="menus__title">La palette du goût</h1>
+      <div class="icone-heart">
+        <i class="fas fa-heart white"></i>
+        <i class="fas fa-heart colored"></i>
+      </div>
+      <section class="enter">
+        <h2>entrées</h2>
+        <div class="enter__bar"></div>
+        <ul class="enter__card">
+          <li class="enter__card__item enter__card__item--1">
+            <div class="enter__wrapper-p">
+              <p class="enter__title">Fricassée d'escargot</p>
+              <p class="enter__description">Au piment d'Espelette</p>
+            </div>
+            <span class="price">25€</span>
+            <div class="check"><i class="fas fa-check-circle"></i></div>
+          </li>
+          <li class="enter__card__item enter__card__item--2">
+            <div class="enter__wrapper-p">
+              <p class="enter__title">Foie gras de canard mi-cuit</p>
+              <p class="enter__description">Et ses copeaux de truffe noire</p>
+            </div>
+            <span class="price">35€</span>
+            <span></span>
+          </li>
+          <li class="enter__card__item enter__card__item--3">
+            <div class="enter__wrapper-p">
+              <p class="enter__title">Oeuf au plat</p>
+              <p class="enter__description">
+                Assaisonné à la truffe sur lit de caviar
+              </p>
+            </div>
+            <span class="price">20€</span>
+            <span></span>
+          </li>
+        </ul>
+      </section>
     </main>
-
-</body>
-
+  </body>
 </html>
