bouton commander + modifier ok + footer ok

--- a/restaurants/la-palette-du-gout.html
+++ b/restaurants/la-palette-du-gout.html
@@ -120,7 +120,19 @@
                 </li>
             </ul>
         </section>
+        <section class="bouton">
+            <a class="btn btn--large" href="#">Commander</a>
+        </section>
     </main>
+    <footer class="footer">
+        <h2 class="footer__title">ohmyfood</h2>
+        <ul class="footer__column">
+            <li><a class="footer__column__link" href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+            <li><a class="footer__column__link" href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+            <li><a class="footer__column__link" href="#">Mentions légales</a></li>
+            <li><a class="footer__column__link" href="mailto:contact@ohmyfood.com">Contact</a></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
