coeur fix background ok avec modifier

--- a/restaurants/la-palette-du-gout.html
+++ b/restaurants/la-palette-du-gout.html
@@ -27,7 +27,7 @@
     <main class="menus">
         <h1 class="menus__title">La palette du goût</h1>
         <div class="icone-heart">
-            <i class="fas fa-heart white"></i>
+            <i class="fas fa-heart white white--grey"></i>
             <i class="fas fa-heart colored"></i>
         </div>
         <section class="enter">
