page restaurant ok

--- a/restaurants/la-palette-du-gout.html
+++ b/restaurants/la-palette-du-gout.html
@@ -22,7 +22,7 @@
         <nav>
             <a href="../index.html" class="header__return"><i class="fas fa-arrow-left"></i></a>
         </nav>
-        <img class="header__img-restaurant" src="../src/img/restaurants/restaurant1.jpg" alt="La la-palette-du-gout" />
+        <img class="header__img-restaurant" src="../src/img/restaurants/restaurant1.jpg" alt="La palette du goût" />
     </header>
     <main class="menus">
         <h1 class="menus__title">La palette du goût</h1>
